--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -11,6 +11,7 @@
 
 .brandname {
   font-size: 50px;
+  font-weight: 700;
   background-image: linear-gradient(45deg, #3679a8, #7f5a83);
   background-clip: text;
   -webkit-background-clip: text;
