--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,9 +105,11 @@ a {
     color-scheme: dark;
   }
 } */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Inter", sans-serif;
 }
