--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -11,7 +11,7 @@
 
 .brandname {
   font-size: 50px;
-  font-weight: 700;
+  font-weight: 800;
   background-image: linear-gradient(45deg, #3679a8, #7f5a83);
   background-clip: text;
   -webkit-background-clip: text;
@@ -21,7 +21,14 @@
 }
 
 .brandtext {
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 35px;
+  font-weight: 800;
   letter-spacing: 0.1rem;
+  text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  .brandtext {
+    font-size: 17px;
+  }
 }
